--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,14 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #eee;
     text-align: center;
-    color: #000;
+    background-color: #eee;
+    color: rgb(23, 23, 26);
+}
+
+body#dark {
+    background-color: rgb(23, 23, 26);
+    color: rgb(160, 160, 160);   
 }
 
 img {
@@ -22,8 +27,16 @@ a {
     text-decoration: none;
 }
 
+#dark a {
+    color: #666;
+}
+
 a:hover {
     color: #666;
+}
+
+#dark a:hover {
+    color: #999;
 }
 
 #head {
@@ -66,13 +79,25 @@ a:hover {
 #searchBox input {
     padding: 10px 25px;
     vertical-align: middle;
-    border: 1px solid #ccc;
     outline: 0;
     border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #222;
+}
+
+#dark #searchBox input {
+    border: 1px solid rgb(64, 64, 64);
+    background-color: rgb(32, 32, 32);
+    color: #999;
 }
 
 #searchBox input[type="text"]:focus {
     outline: 2px solid #ccc;
+}
+
+#dark #searchBox input[type="text"]:focus {
+    outline: 2px solid rgb(128, 128, 128);
 }
 
 #searchBox input[type="image"] {
@@ -97,18 +122,20 @@ a:hover {
     grid-gap: 10px 25px;
     display: grid;
     grid-template-columns: 127px 127px 127px 127px 127px 127px;
-    background-color: #fff;
     padding: 10px;
+    background-color: #fff;
+}
+
+#dark #boxies {
+    background-color: rgb(32, 32, 32);
 }
 
 .box {
-    border: 1px solid #ccc;
     border-radius: 10px;
     display: inline-grid;
     grid-gap: 2px;
     padding: 10px;
     margin: 5px;
-    background-color: #fff;
     text-align: center;
     width: 118px;
     max-width: 118px;
@@ -116,6 +143,13 @@ a:hover {
     max-height: 140px;
     cursor: pointer;
     overflow: hidden;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+
+#dark .box {
+    background-color: rgb(64, 64, 64);
+    border: 1px solid rgb(128, 128, 128);
 }
 
 .box:hover {
@@ -123,12 +157,20 @@ a:hover {
     transform: scale(1.1);
 }
 
+#dark .box:hover {
+    background-color: rgb(16, 16, 16);
+}
+
 .box .icon img {
     width: 96px;
     height: 96px;
-    border: 1px solid #ccc;
     border-radius: 10px;
     padding: 2px;
+    border: 1px solid #ccc;
+}
+
+#dark .box .icon img {
+    border: 1px solid rgb(128, 128, 128);
 }
 
 .box .icon img:hover {
@@ -143,20 +185,29 @@ a:hover {
 }
 
 .ads {
-    background-color: #ddd;
     padding: 10px;
     margin: 5px auto;
     text-align: center;
+    background-color: #ddd;
     color: #333;
+}
+
+#dark .ads {
+    background-color: rgb(16, 16, 16);
+    color: #666;
 }
 
 .ad {
     display: inline-block;
     margin: 0 5px;
     padding: 2px;
-    border: 1px solid #aaa;
     overflow: hidden;
     cursor: pointer;
+    border: 1px solid #aaa;
+}
+
+#dark .ad {
+    border: 1px solid rgb(128, 128, 128);
 }
 
 .ad.a125 {
