--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body {
     text-align: center;
     background-color: #eee;
     color: rgb(23, 23, 26);
-    min-width: 750px;
 }
 
 body#dark {
@@ -86,6 +85,7 @@ a:hover {
     border: 1px solid #ccc;
     background-color: #fff;
     color: #222;
+    margin: 3px;
 }
 
 #dark #searchBox input,
@@ -120,15 +120,17 @@ a:hover {
 }
 
 #boxies {
-    text-align: center;
-    margin: 25px auto;
-    overflow: auto;
-    width: 90%;
-    grid-gap: 10px 25px;
     display: grid;
-    grid-template-columns: 127px 127px 127px 127px 127px 127px;
-    padding: 10px;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(127px, 1fr));
+    text-align: center;
+    margin: 2rem auto;
+    width: 90%;
+    place-items: center;
+    place-content: center;
+    padding: 1rem;
     background-color: #fff;
+    border-radius: 1rem;
 }
 
 #dark #boxies {
@@ -136,9 +138,9 @@ a:hover {
 }
 
 .box {
-    border-radius: 10px;
     display: inline-grid;
-    grid-gap: 2px;
+    grid-gap: 3px;
+    border-radius: 10px;
     padding: 10px;
     margin: 5px;
     text-align: center;
@@ -147,7 +149,6 @@ a:hover {
     height: 140px;
     max-height: 140px;
     cursor: pointer;
-    overflow: hidden;
     background-color: #fff;
     border: 1px solid #ccc;
 }
@@ -235,12 +236,49 @@ a:hover {
     opacity: 0.8;
 }
 
+[data-tooltip]:before {
+    /* needed - do not touch */
+    content: attr(data-tooltip);
+    position: absolute;
+    opacity: 0;
+    
+    /* customizable */
+    transition: all 0.15s ease;
+    padding: 10px;
+    border-radius: 10px;
+    color: #333;
+    box-shadow: 2px 2px 1px silver;
+}
+
+#dark [data-tooltip]:before {
+    color: #aaa;
+    box-shadow: 2px 2px 1px #111;
+}
+
+[data-tooltip]:hover:before {
+    /* needed - do not touch */
+    opacity: 1;
+    
+    /* customizable */
+    background: #ddd;
+    margin-top: -50px;
+    margin-left: 10px;
+}
+
+#dark [data-tooltip]:hover:before {
+    background: rgb(32,32,32);
+}
+
+[data-tooltip]:not([data-tooltip-persistent]):before {
+    pointer-events: none;
+}
+
 #foot {
     margin: 20px auto;
     font-size: 14px;
 }
 
-@media screen and (max-width: 339px) and (min-width: 180px){
+/* @media screen and (max-width: 339px) and (min-width: 180px){
     #boxies {
         grid-template-columns: 127px;
     }
@@ -298,4 +336,4 @@ a:hover {
     #boxies {
         grid-template-columns: 127px 127px 127px 127px 127px 127px 127px 127px 127px 127px;
     }
-}
+} */
